# innowise_laboratory

lecture_1/: pyproject.toml
lecture_2/: main.py
